Changing plugin yaml

--- a/plugins/plugins.yml
+++ b/plugins/plugins.yml
@@ -1,2 +1,7 @@
-loaded:
-    - "Plugin\\Hakon\\Install\\Service\\InstallServiceProvider"
+providers:
+    loaded:
+        - "Plugin\\Hakon\\Install\\Service\\InstallServiceProvider"
+
+aliases:
+    loaded:
+        pluginInstall: "Plugin\\Hakon\\Install\\Service\\InstallServiceProvider"
