--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "efuzyon/tools": "^1.0",
-        "illuminate/html": "^5.0"
+        "LaravelCollective/html": "^5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
