Changes to .env in localhost (local database)

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=hakonCMS
-DB_USERNAME=hakon
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=root
