--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "efuzyon/tools": "^1.0",
+        "efuzyon/tools": "1.0.*",
         "LaravelCollective/html": "^5.2"
     },
     "require-dev": {
